--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -10,7 +10,15 @@ main: blue #86a9cc
     background-color: #d4e9d3;
     height: 165px;
 }
-
+.smallheader {
+	background-color: #d4e9d3;
+    height: 125px;
+    border-bottom: 1px solid #008000;
+	border-left: 0px;	
+	border-top: 0px;
+	border-right: 0px;
+	padding-top: 15px;
+}
 a {
 	color: #646464;
 }
@@ -89,6 +97,15 @@ i.fa.fa-thermometer-three-quarters{
 ul.values-list > li {
 	margin-left: 25px;
 }
+
+a.accordion-title {
+	color: #008000;
+	font-size: 16px;
+}
+a.accordion-title:hover {
+	background: #d4e9d3;
+    color: #008000;
+}
 div.footer {
 	background-color: #fff;
 	bottom: 0;
@@ -103,4 +120,18 @@ div.footer {
 	text-align: left;
 	text-transform: none;
 	z-index: 99999;
+}
+div.smallfooter {
+    background-color: #fff;
+    bottom: 0;
+    box-shadow: 0 -1px 0px rgba(0, 0, 0, 0.2);
+    color: #646464;
+    font: 11px Arial, sans-serif;
+    left: 0;
+    margin: 0;
+    padding: 5px 5px 0 5px;
+    right: 0;
+    text-align: left;
+    text-transform: none;
+    z-index: 99999;
 }
